ACE/testing/overlays/qa/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
spec:
  selector:
    matchLabels:
      app: trigger-react
  template:
    metadata:
      labels:
        app: trigger-react
    spec:
      containers:
      - name: tekton-pod
        image: usmanasim11/cicd:react-app-fdfe9d79f34232960aafd15c643ca3d56ba0ae37
        ports:
        - containerPort: 6000
